--- a/source/_posts/性能优化.md
+++ b/source/_posts/性能优化.md
@@ -3,6 +3,7 @@ title: 性能优化
 tags: []
 top: false
 comments: true
+abbrlink: fc854d4d
 date: 2020-05-15 13:17:21
 permalink:
 categories:
@@ -34,6 +35,10 @@ ulimit -a
 ### nginx链接优化
 https://www.jianshu.com/p/a1aa93b55f7a
 
+https://blog.poetries.top/2018/11/27/nginx-module-summary/
+
+https://www.nginx.com/resources/wiki/modules/
+
 大概意思是 使用长连接，增大最大连接数
 
 ### linux内核优化
@@ -49,8 +54,56 @@ net.netfilter.nf_conntrack_tcp_timeout_established = 3600
 ```
 > 如果出现`没有那个文件或目录`错误，先`lsmod |grep conntrack`查询是否加载ip_conntrack，使用`modprobe ip_conntrack`加载
 
+最终参数
+
+```
+net.ipv4.ip_forward = 0
+net.ipv4.conf.default.rp_filter = 1
+net.ipv4.conf.default.accept_source_route = 0
+kernel.sysrq = 0
+kernel.core_uses_pid = 1
+net.ipv4.tcp_syncookies = 1
+kernel.msgmnb = 65536
+kernel.msgmax = 65536
+kernel.shmmax = 68719476736
+kernel.shmall = 4294967296
+net.ipv4.tcp_max_tw_buckets = 5000
+net.ipv4.tcp_sack = 1
+net.ipv4.tcp_window_scaling = 1
+net.ipv4.tcp_rmem = 4096 87380 4194304
+net.ipv4.tcp_wmem = 4096 16384 4194304
+net.core.wmem_default = 8388608
+net.core.rmem_default = 8388608
+net.core.rmem_max = 16777216
+net.core.wmem_max = 16777216
+net.core.netdev_max_backlog = 262144
+net.core.somaxconn = 262144
+net.ipv4.tcp_max_orphans = 3276800
+net.ipv4.tcp_max_syn_backlog = 8192
+net.ipv4.tcp_timestamps = 0
+net.ipv4.tcp_synack_retries = 1
+net.ipv4.tcp_syn_retries = 1
+net.ipv4.tcp_tw_recycle = 1
+net.ipv4.tcp_tw_reuse = 1
+net.ipv4.tcp_mem = 94500000 915000000 927000000
+net.ipv4.tcp_fin_timeout = 30
+net.ipv4.tcp_keepalive_time = 10
+net.ipv4.tcp_keepalive_probes=5
+net.ipv4.ip_local_port_range = 1024 65534
+fs.file-max = 6553500
+fs.inotify.max_user_instances = 10485760
+fs.inotify.max_user_watches=10485760
+net.netfilter.nf_conntrack_max = 6553500
+net.netfilter.nf_conntrack_tcp_timeout_close_wait = 60
+net.netfilter.nf_conntrack_tcp_timeout_fin_wait = 120
+net.netfilter.nf_conntrack_tcp_timeout_time_wait = 120
+net.netfilter.nf_conntrack_tcp_timeout_established = 3600
+```
 
 ### 使用arthas进行性能监控
+
+java -jar arthas-boot.jar --telnet-port 9997 --http-port 9990
+
 
 <!-- more -->
 
@@ -60,3 +113,4 @@ track [classname] [method] ['#cost > 150']
 > `track`跟踪方法时间，classname类全路径 method方法名，'#cost > 150'可选时间过滤条件，跟踪方法调用栈并显示执行时间
 
 <hr />
+
