--- a/source/_posts/常用工具备忘录.md
+++ b/source/_posts/常用工具备忘录.md
@@ -2,7 +2,7 @@
 title: 常用工具备忘录
 tags: []
 top: false
-comments: true
+comments: false
 abbrlink: 7e4c20c3
 date: 2020-05-21 17:37:14
 permalink:
@@ -19,6 +19,22 @@ keywords: tool
 
 node版本管理工具
 [doc](https://github.com/nvm-sh/nvm)
+
+
+### rvm
+
+ruby版本管理工具
+
+安装ruby后使用`rvm use ruby-2.6.5`报错`selecting rubies with 'rvm use ...' will not work`问题
+
+解决方案：
+```
+[[ -s "$HOME/.rvm/scripts/rvm" ]] && source "$HOME/.rvm/scripts/rvm" # Load RVM into a shell session *as a function*
+
+```
+将`~/.bash_profile`的上述内容加入到`~/.bashrz`中
+
+>以登录身份运行问题
 
 ### pdman
 
@@ -44,5 +60,11 @@ node版本管理工具
 [ ] [java任务调度](https://www.ibm.com/developerworks/cn/java/j-lo-taskschedule/index.html)
 [ ] spring事物、[多数据源事物](http://www.gxitsky.com/2019/12/11/springboot-app-50-aop-datasource-switch/)
 
+
+### todo
+
+[ ] 新增 RSS 订阅功能
+
+[ ] Google 、 百度收录优化
 
 <hr />
